[INDEX.HTML]:update on file index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </div>
             
             <div class="bar-right">
-                <h2>SHOPPING NOW</h2>
+               <a href="/seller/seller.html"><h2>SELLER</h2></a> 
+                <h3>SHOPPING NOW</h3>
                 <!-- //=============// -->
             </div>
         </div>
