--- a/seller/seller.html
+++ b/seller/seller.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <div class="nav-bar">
+    <div class="image">
+        <img src="/Costomer/image/logo.krama khmer-removebg-preview.png" alt="">
+    </div>
+    
+    <div class="bar-right">
+       <a href="/index.html"><h2>HOME</h2></a> 
+        <h3>SHOPPING NOW</h3>
+        <!-- //=============// -->
+    </div>
+</div>
   <button onclick="add()" class="add"> Add products</button> 
   <div id="products-dialog" style="display:none;">
     <dialog open>
